# summon-claude

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  prek.toml  pyproject.toml  slack-app-manifest.yaml
.claude-plugin/: plugin.json
.claude-plugin/skills/summon/: SKILL.md
.github/: renovate.json
.github/workflows/: README.md  ci.yaml  docs.yaml  publish.yaml  slack-integration.yaml
_previews/pr-124/: sitemap.xml
_previews/pr-124/development/: index.md
_previews/pr-124/search/: search_index.json
_previews/pr-124/troubleshooting/: index.html  index.md
_previews/pr-140/: 404.html  index.html  objects.inv  sitemap.xml
_previews/pr-140/changelog/: index.html  index.md
_previews/pr-140/concepts/: index.html
_previews/pr-140/development/: index.html
_previews/pr-140/getting-started/: index.html  index.md
_previews/pr-140/guide/: index.html  index.md
_previews/pr-140/reference/: index.html  index.md
_previews/pr-140/search/: search_index.json
_previews/pr-140/stylesheets/: extra.css
_previews/pr-140/troubleshooting/: index.html  index.md
_previews/pr-145/: llms.txt  sitemap.xml
_previews/pr-146/: sitemap.xml
_previews/pr-146/concepts/: index.md
_previews/pr-91/: 404.html  index.html  index.md  sitemap.xml
_previews/pr-91/development/: index.html
_previews/pr-91/getting-started/: index.html
_previews/pr-91/guide/: index.html
_previews/pr-91/reference/: index.html
_previews/pr-91/search/: search_index.json
_previews/pr-91/troubleshooting/: index.html  index.md
_previews/pr-97/: llms.txt  sitemap.xml
_previews/pr-97/concepts/: index.html
_previews/pr-97/guide/: index.md
_previews/pr-97/search/: search_index.json
_previews/pr-97/troubleshooting/: index.html
docs/: index.md  troubleshooting.md
docs/architecture/: database.md  index.md  overview.md  security.md
docs/concepts/: context.md  daemon.md  database.md  index.md  overview.md  security.md  slack-integration.md
docs/development/: contributing.md  index.md  releasing.md  testing.md
docs/getting-started/: configuration.md  index.md  installation.md  quickstart.md  slack-setup.md  upgrading.md
docs/guide/: canvas.md  commands.md  configuration.md  cron-tasks.md  doctor.md  github-integration.md  hooks.md  index.md  jira-integration.md  permissions.md  pm-agents.md  projects.md  scribe-integrations.md  scribe.md  sessions.md  threading.md
docs/reference/: cli.md  commands.md  environment-variables.md  index.md  mcp-tools.md  permissions.md  prompts.md
docs/reference/api/: cli.md  config.md  index.md  sessions.md  slack.md
docs/stylesheets/: extra.css
latest/: 404.html  index.html  index.md  llms.txt  sitemap.xml
latest/changelog/: index.html  index.md
latest/concepts/: index.html  index.md
latest/concepts/context/: index.html  index.md
latest/concepts/daemon/: index.html
latest/concepts/database/: index.html  index.md
latest/concepts/overview/: index.html  index.md
latest/concepts/security/: index.html  index.md
latest/concepts/slack-integration/: index.html  index.md
latest/concepts/threading/: index.html
latest/development/: index.html  index.md
latest/development/contributing/: index.html  index.md
latest/development/releasing/: index.html  index.md
latest/development/testing/: index.html  index.md
latest/getting-started/: index.html  index.md
latest/getting-started/configuration/: index.html  index.md
latest/getting-started/installation/: index.html  index.md
latest/getting-started/quickstart/: index.html  index.md
latest/getting-started/slack-setup/: index.html  index.md
latest/getting-started/upgrading/: index.html  index.md
latest/guide/: index.html  index.md
latest/guide/canvas/: index.html  index.md
latest/guide/doctor/: index.html
latest/reference/: index.html  index.md
latest/search/: search_index.json
latest/troubleshooting/: index.html  index.md
scripts/: docs-screenshots.py  generate_commands_docs.py  generate_env_docs.py  generate_mcp_docs.py  generate_permissions_docs.py  generate_prompt_docs.py
src/summon_claude/: __init__.py  _formatting.py  auth.py  bolt_router.py  canvas_mcp.py  channel_manager.py  cli.py  cli_config.py  commands.py  config.py  content_display.py  daemon.py  daemon_client.py  diagnostics.py  event_dispatcher.py  github_auth.py  ipc.py  jira_auth.py  jira_proxy.py  mcp_tools.py  mcp_untrusted_proxy.py  permissions.py  rate_limiter.py  registry.py  security.py  session.py  session_manager.py  slack_browser.py  socket_health.py  streamer.py  summon_cli_mcp.py  thread_router.py
tests/: conftest.py  helpers.py  test_ask_user.py  test_audit_log.py  test_auth.py  test_bolt_router.py  test_bug_hunter_memory.py  test_bug_hunter_profile.py  test_bug_hunter_prompts.py  test_build_config.py  test_canvas_mcp.py  test_canvas_store.py  test_channel_manager.py  test_cli.py  test_cli_commands.py  test_cli_config.py  test_cli_db.py  test_cli_init.py  test_cli_interactive.py  test_cli_jira.py  test_cli_project.py  test_cli_reset.py  test_cli_standards.py  test_command_inventory.py  test_commands.py  test_config.py  test_config_registry.py  test_config_xdg.py  test_content_display.py  test_cron_task_integration.py  test_daemon.py  test_data_dir_isolation.py  test_diagnostics.py  test_diagnostics_guard.py  test_docs_screenshots.py  test_event_consumer.py  test_event_dispatcher.py  test_event_probe.py  test_github_auth.py  test_global_pm.py  (+57 more)
tests/docs/: conftest.py  test_bash_codeblocks.py  test_cli_commands.py  test_env_vars.py  test_links.py  test_mcp_tools.py  test_permissions.py  test_prompts.py  test_python_codeblocks.py  test_session_commands.py
tests/integration/: conftest.py  test_browser_monitor.py  test_canvas_operations.py  test_channel_lifecycle.py  test_channel_manager.py  test_channel_reuse.py  test_classifier_llm.py  test_event_delivery.py  test_message_routing.py  test_permissions.py  test_resume_e2e.py  test_slack_provider.py  test_socket_mode.py  test_socket_resilience.py  test_turn_abort.py  test_zzz_channel_rename.py
(+230 files in other folders)
